Container alignment Fixed

--- a/src/index.css
+++ b/src/index.css
@@ -82,8 +82,13 @@ header input {
   padding-left: 22px;
   height: 46px;
   color: var(--text);
-  width: 70%;
+  width: 100%;
   margin-right: 25px;
+}
+
+.container-left{
+    width: 90%;
+    margin-left: auto;
 }
 
 /* Button Component ------------------------ */
@@ -96,6 +101,7 @@ header input {
   8px 8px 15px hsla(0, 0%, 0%, 15%);
   height: 50px;
   width: 50px;
+  min-width: 50px;
   border-radius: 50%;
   display: flex;
   align-items: center;
@@ -115,5 +121,8 @@ header input {
   transform: scale(.9);
 }
 
-
+/* Tasks Component ------------------------ */
+.task-wrapper h4{
+  margin: 17px 8px;
+}
 
